CB-6281 - fixing the header font to Lato, correcting the 'Apache Cordova' and 'Plugins Registry' correctly, as well as removing extra spacing on plugin results and view all pages.

--- a/attachments/css/header.less
+++ b/attachments/css/header.less
@@ -43,14 +43,16 @@
 
     .top-project-text, .top-plugins-registry-text {
       text-transform: uppercase;
+      font-family: 'Lato', sans-serif;
+      font-weight: 300;
     }
 
     .top-project-text {
-      font-size: 16px;
+      font-size: 12px;
     }
 
     .top-plugins-registry-text {
-      font-size: 20px;
+      font-size: 28px;
     }
 
     .header-links {
