--- a/attachments/css/layout.less
+++ b/attachments/css/layout.less
@@ -60,7 +60,7 @@ a.dep-link {
 
 #content-wrapper {
     padding-top: 0;
-    width: 100%;
+    // width: 100%;
 }
 
 
